Add Lief to vendors, clean up comments

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -192,6 +192,16 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <hr>
+  <h2><a href="http://lief.co.kr">Lief</a></h2>
+  <div class="row">
+  <div class="col-md-4">
+    <img src="../images/vendors/lief.png" class="img-fluid" alt="Lief logo"/>
+  </div>
+  <div class = "col-md-8">
+  <p>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing us to create lovely, classical styles that can be worn in both casual and elegant situations.</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
       <div class="row">
         <div class="col-md-4">
@@ -276,33 +286,12 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
   <!--
-  <h2><a href="https://biopolitics.thebase.in">Bio・Politics</a></h2>
-  <p>性別や年齢に捕われない、自由な表現をテーマにした大人Rock</p>
-  <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
-  <h2><a href="https://www.instagram.com/enchanteddreamwear/">Enchanted Dream Couture</a></h2>
-  <p>Enchanted Dream Couture is an American indie brand based in Texas. Since 2016 we design and make handmade lolita accessories, now our company has grown to making handbags, socks,  dresses and shoes. Our main goal is to create well made dresses that fits comfortably to different body size. We strive to create unique elegant quality items that are well thought of to the smallest details.</p>
   <h2>Frill Style</h2>
   <p>Coming soon!</p>
   <h2><a href="https://www.ghostgirlgoods.com/">Ghost Girl Goods</a></h2>
   <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
-  <h2><a href="https://www.etsy.com/shop/HoliLoliEGL">Holi Loli</a></h2>
-  <p>I’m a designer/maker that fell in love with Lolita in 2004- the lovely shape of classic pieces really spoke to me. I started creating soon after, and offer underskirts and accessories on my Etsy!  Though my main influences are classic and gothic, lot of my inspiration comes from Indian fashion. The name, Holi Loli, is a reference to the festival of colours, and this is reflected in my designs. I’m planning to release a print soon featuring a combination of Indian and Gothic. I’ve already started on it and am hoping to have it ready for the event! See you there!</p>
   <h2><a href="https://kaetshop.bigcartel.com/">KaetShop</a></h2>
   <p>KaetShop is a celebration of retrofuturism and kawaii aesthetics.  They are proud to offer cute accessories including Made-to-Order customizable chokers and necklaces to perfectly round out your coords!</p>
-  <h2><a href="lief.co.kr">Lief</a></h2>
-  <p>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing us to create lovely, classical styles that can be worn in both casual and elegant situations.</p>
-  <h2><a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a></h2>
-  <h2><a href="https://prettysour.com/">Pretty Sour</a></h2>
-  <p>Pretty Sour is a size inclusive ethical US based indie clothing brand heavily inspired by J-fashion. We sell handmade clothing and accessories ranging from size XS - 5X in primarily pastel and vibrant colors with kitchsy cute illustrations and nostalgic prints.</p>
-  <h2><a href="https://royalprincessalice.net">Royal Princess Alice</a></h2>
-  <p>Noble like European Princess, mysterious, cute and dark like the world of Alice ...</p>
-  <p>It is a Gothic & Lolita brand with the concept of such a world view. In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
-  <p>ヨーロッパのPrincess のように気品高く</p>
-  <p>Aliceの世界のように不思議でキュートでダーク...</p>
-  <p>そんな世界観をコンセプトにしたゴシック＆ロリータブランドです</p>
-  <p>更に、和テイストを取り入れたロリータスタイル『和ロリ』も加わりました。</p>
-  <h2><a href="https://www.thedecorafactory.com">The Decora Factory (remote)</a></h2>
-  <p>The Decora Factory is a Harajuku fashion and accessories brand based in Sydney, Australia. We design and make many of our kawaii clothes and accessories, and are plus-size inclusive. We also make accessories suitable for sweet and classic lolita, as well as catering for pastel Jfashion trends.</p>
 -->
   <hr>
 
