--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
             <a href="./about/coc.html">Code of Conduct</a></br>
             <a href="./about.html">Our Values and Staff</a></br>
             <a href="./about/contact.html">Contact Us</a></br>
+            <a href="./about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -172,8 +173,20 @@
     <p><a href="https://www.instagram.com/ska_skank_redemption/">Ryan</a> is Nif's loving husband, and our transportation, logistics, and advanced arts and crafts coordinator. He may have taken your photo at one of our small events or at a convention. When he's not catering to his wife's extravagant whims, he loves playing pinball, gold panning, playing guitar and recording music, skateboarding, and restoring his vintage truck.</p>
   </div>
 </div>
-<p>Kjrsten Kay drew our logos and design elements.</p>
-<p><a href="http://moniquelopez.net">Monique</a> is the genius who built our gorgeous website.</p>
+<p>We are proud to partner with <a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> and <a href="https://www.roseforet.com/">Rosé Forêt</a> for support in the following domains:
+  <ul>
+    <li>Broadcasting</li>
+    <li>Social media content and community</li>
+    <li>Remote vending</li>
+    <li>Fashion shows</li>
+    <li>Coord contests</li>
+    <li>VIP experience</li>
+    <li>Volunteer coordination</li>
+    <li>At-event support</li>
+  </ul>
+</p>
+<p>Kjrsten Kay originally designed and drew logos and design elements.</p>
+<p><a href="http://moniquelopez.net">Monique</a> built our website.</p>
 
 </div>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
