--- a/about/privacy.html
+++ b/about/privacy.html
@@ -27,11 +27,11 @@
       <ul>
       <li>
         <button class="btnList" onclick="openList('1')">
-				<span class="drop">Royal Vegas Retreat</span>
-				<span class="acc">Royal Vegas Retreat</span>
-			</button>
-			<div class="content_list left" id="thisList_1">
-				<p class="sub-menu">
+        <span class="drop">Royal Vegas Retreat</span>
+        <span class="acc">Royal Vegas Retreat</span>
+      </button>
+      <div class="content_list left" id="thisList_1">
+        <p class="sub-menu">
          <a href="../vegas.html">RVR Home</a></br>
         <a href="../event/event-faq.html">Event FAQ</a></br>
         <a href="../event/programming.html">Programming and Schedule</a></br>
@@ -42,7 +42,7 @@
         <a href="../event/vendors.html">Vendors</a></br>
         <a href="../event/volunteers.html">Volunteers</a>
       </p>
-			</div>
+      </div>
       </li>
             <li>
               <button class="btnList" onclick="openList('2')">
@@ -65,8 +65,8 @@
            <p class="sub-menu">
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
-            <a href="../about/contact.html" class="active">Contact Us</a></br>
-            <a href="../about/privacy.html">Privacy Policy</a></br>
+            <a href="../about/contact.html">Contact Us</a></br>
+            <a href="../about/privacy.html" class="active">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -90,21 +90,20 @@
   <body>
     <div class="hero">
 
-    <h1>Contact Us</h1>
+    <h1>Privacy Policy</h1>
 
 
 </div>
 
 <div class="row content">
-<p>For questions about Royal Vegas Retreat 2021, please see our <a href="../event/event-faq.htm">event FAQ page</a>.
-<h2>Via email</h2>
-<p>For questions about registration and tickets, send an email to <a href="mailto:registration@prettyprincess.club">registration@prettyprincess.club</a></p>
-<p>For all other questions, contact us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
-<h2>Via social media</h2>
-<p>We love when you like and comment on our social media posts! We cannot guarantee a response to any comments left on our social media pages. For anything that requires a response, please use our email contacts listed above.</p>
-<p>Find us on <a href="https://www.instagram.com/prettyprincess.club/">Instagram</a> at <a href="https://www.instagram.com/prettyprincess.club/">@prettyprincess.club</a>.</p>
-<p>Find us on <a href="https://www.facebook.com/ppcllcrvr/">Facebook</a> at <a href="https://www.facebook.com/ppcllcrvr/">/ppcllcrvr</a>.</p>
-<p>Find us on <a href="https://twitter.com/ppcllcrvr">Twitter</a> at <a href="https://twitter.com/ppcllcrvr">@ppcllcrvr</a>.</p>
+<p>Our privacy policy is pretty simple: prettyprincess.club does not collect any information from you at any time, for any reason. Our site is built on AWS: it is statically hosted in S3 and served via CloudFront and Route 53. S3 logs interactions with our website, but we do not use these logs for any reason.</p>
+<p>On our site, we pull in some libraries and fonts from Google, and Google may receive some information about your activity indirectly. You can validate this using a tool called <a href="https://themarkup.org/blacklight?url=prettyprincess.club">Blacklight from The Markup</a>.</p>
+<p>We sell tickets using Eventbrite. We use the personal info collected there, i.e. your first and last name and email address, to match your registration with your badge when you arrive at our event. We use your dietary restriction information to determine what to serve you at afternoon tea. All other interactions are subject to <a href="https://www.eventbrite.com/support/articles/en_US/Troubleshooting/eventbrite-privacy-policy?lg=en_US">Eventbrite's privacy policy</a>.</p>
+<p>In 2021, at our event, we will ask all attendees to show us proof of vaccination and their ID (which may both use a legal name which is different from the chosen name we have on file). We will not collect or store this information electronically for any reason.</p>
+<p>The MGM Grand uses Passkey to allow attendees to reserve rooms at our room block rate. Interactions with Passkey are subject to <a href="https://www.cvent.com/en/privacy-policy">their privacy policy.</a></p>
+<p>Our webshop is built using Square's eCommerce suite (formerly Weebly). Your interactions there are subject to <a href="https://www.weebly.com/privacy">Weebly's privacy policy</a> (we've linked the seller-facing policy so you can see what we're subject to), and you can also validate how your information is used with <a href="https://themarkup.org/blacklight?url=shop.prettyprincess.club">Blacklight</a>. If you buy something from us, we will use your shipping address to determine where and how the items should be shipped.</p>
+<p>Our hybrid blog and email list is built on Buttondown, and your interactions there are subject to <a href="https://buttondown.email/privacy">Buttondown's privacy policy.</a> You can validate how your information is used with <a href="https://themarkup.org/blacklight?url=buttondown.email">Blacklight</a>.</p>
+<p>You can find us on various other social media sites, and any interactions you have with us there are subject to those sites' individual privacy policies.</p>
 </div>
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="../js/popper.min.js"></script>
