--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -64,6 +64,7 @@
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
             <a href="../about/contact.html">Contact Us</a></br>
+            <a href="../about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -90,6 +91,16 @@
     <h1>RVR Special Guests</h1>
   <p>We are so excited to have all of our wonderful special guests at our 2021 event! We will be gradually adding our special guests to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed special guests (so far!) for 2021 (in alphabetical order):</p>
   <hr>
+  <h2><a href="https://ko-fi.com/avina">Avina-Kei</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/guests/avina.jpg" class="img-fluid" alt="Avina wearing a layered coord with drawings and squiggles around them"/>
+</div>
+  <div class="col-md-8">
+  <p>Avina has been wearing Japanese street fashion for over fifteen years, starting with decora and moving to lolita and countless other alternative styles. These days, however, they just say they aspire to be a fashion blob and artist while balancing a white-collar career. Avina is proud to have been a part of a number of non-profit and public interest groups, including Kawaii Riot. Their greatest wishes are to fight evil by moonlight, sustainably engage in alternative fashion, and confront discrimination in alternative spaces. Avina has Ko-fi, where they frequently update their free-to-read and sponsor-free alternative fashion blog and run a subscription service for their digital artwork. See it here: <a href="https://ko-fi.com/avina">https://ko-fi.com/avina</a>!</p>
+</div>
+</div>
+  <hr>
   <h2><a href="https://www.fluffykawaiijo.com">Fluffy Kawaii Jo</a></h2>
     <div class="row">
         <div class="col-md-4">
@@ -97,9 +108,21 @@
 </div>
   <div class="col-md-8">
   <p>Everybody Can Be Kawaii – No matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself.</p>
-
 <p>Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene as well as entertaining and funny videos like her Lolitas vs Normies and Action Lolita series – proving that not just everybody can be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
   <p>You can find her at <a href="https://www.fluffykawaiijo.com">fluffykawaiijo.com</a>, on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
+</div>
+</div>
+  <hr>
+  <h2><a href="https://www.jadedisland.com">JadedIsland</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/guests/jade.png" class="img-fluid" alt="Jade looking introspective in a pink wig and rosy top"/>
+</div>
+  <div class="col-md-8">
+  <p>Jadedisland is a writer from Maryland who works within alternative fashion spaces and creative communities to encourage and uplift personal narratives and creative expression. Jade knows that finding personal acceptance and creative pursuits are fulfilling and necessary for growth. While Jadedisland is best known for her life as a Jfashion enthusiast, pink energy magical girl, and storyteller across social media, she is a vocal advocate and bookworm full-time. Her life as a kawaii Black femme has led to an award-winning web series; Noir 365, the non-profit Kawaii Riot, and the DC Web fest gold award for digital expression and local hero. She studied English literature and psychology at Elmira College but continues her education by experiencing the world and new perspectives.</p>
+<p>Her personal work can be found at <a href="https://www.jadedisland.com">www.jadedisland.com</a> & on social media @Jadedisland</p>
+<p>Learn more about Kawaii Riot – <a href="https://www.kawaiiriot.org">www.kawaiiriot.org</a> for advocacy and intersectionality in the alternative fashion community.</p>
+</p>
 </div>
 </div>
   <hr>
