--- a/event/vendors.html
+++ b/event/vendors.html
@@ -64,6 +64,7 @@
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
             <a href="../about/contact.html">Contact Us</a></br>
+            <a href="../about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -142,6 +143,18 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 <p/>
 <hr>
+<h2><a href="https://kaetia.carrd.co/">KaetShop (remote)</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/kaetshop.png" class="img-fluid" alt="KaetShop logo"/>
+</div>
+  <div class="col-md-8">
+<p>KaetShop is a celebration of retrofuturism and kawaii aesthetics.  They are proud to offer cute accessories including Made-to-Order customizable chokers and necklaces to perfectly round out your coords!
+</p>
+</div>
+</div>
+<p/>
+<hr>
 <h2><a href="https://kanekoshop.com/">Kaneko (remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
@@ -175,6 +188,19 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
   <div class="col-md-8">
 <p>Kira Kira Kawaii Shoppe started from a passion for Japanese street fashion and sewing to evolve into a brand focused on sustainability made cute.</p>
 <p>To minimize impact on the planet, K3S uses upcycled and vintage materials to create one of a kind pieces. With the recent addition of the Beloveds section, the Shoppe now also offers vintage and secondhand offbrand pieces handpicked by shop owner Chizu to offer to the lolita community for accessibility and affordable pricing. And with the usage of recycled shipping materials, Kira Kira Kawaii Shoppe encourages its customers to think about their own eco footprint, and dares to ask the question: where do your clothes come from?</p>
+</div>
+</div>
+<p/>
+<hr>
+<h2><a href="https://www.etsy.com/shop/kittykaya">KittyKaya</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/kittykaya.jpg" class="img-fluid" alt="KittyKaya logo"/>
+</div>
+  <div class="col-md-8">
+<p>Hello this is Christina, the creator behind Kittykaya! Kittykaya’s apparel features my own original artwork based on lolita fashion and kawaii culture. I’ve been around awhile and I found it was difficult to wear lolita every day. Now that I’ve started a family of my own I needed more comfortable looks that still filled my lolita heart. My clothing bridges the gap between comfy and cute!</p>
+<p>I make my headbows on clips for all day wear or even for stacking in comfort. I sew plus size friendly dresses with custom sizing available, full back shirring, and they come with pockets! My full print tees, tights, leggings size up to 3XL. And my zipper tote bags are super roomy to hold all the things that won’t fit in your adorable but tiny Usakumyas.</p>
+<p>My Instagram is the most updated with my current projects: <a href="https://instagram.com/kittykaya.kawaii">instagram.com/kittykaya.kawaii</a></p>
 </div>
 </div>
 <p/>
@@ -309,8 +335,6 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
   <p>Coming soon!</p>
   <h2><a href="https://www.ghostgirlgoods.com/">Ghost Girl Goods</a></h2>
   <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
-  <h2><a href="https://kaetshop.bigcartel.com/">KaetShop</a></h2>
-  <p>KaetShop is a celebration of retrofuturism and kawaii aesthetics.  They are proud to offer cute accessories including Made-to-Order customizable chokers and necklaces to perfectly round out your coords!</p>
 -->
   <hr>
 
