--- a/event/volunteers.html
+++ b/event/volunteers.html
@@ -64,6 +64,7 @@
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
             <a href="../about/contact.html">Contact Us</a></br>
+            <a href="../about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -92,8 +93,8 @@
   <h1>Volunteer at Royal Vegas Retreat</h1>
   <hr>
   <p>We need your help to make this event as fabulous as possible!</p>
-  <p>Sign up to volunteer at Royal Vegas Retreat 2021 now: <a href="https://forms.gle/eeqKQQVkdQtdBKLs7">https://forms.gle/eeqKQQVkdQtdBKLs7</a></p>
-  <p>Volunteers can sign up to assist in one of many areas, including:
+  <p>Sign up to volunteer at Royal Vegas Retreat 2021 before October 19: <a href="https://forms.gle/eeqKQQVkdQtdBKLs7">https://forms.gle/eeqKQQVkdQtdBKLs7</a></p>
+  <p>We are accepting volunteers on a rolling basis. Volunteers can sign up to assist in one of many areas, including:
     <ul>
       <li>Registration</li>
       <li>Fashion show coordination (separate from modeling - we will release model applications in late 2021)</li>
