--- a/vegas.html
+++ b/vegas.html
@@ -64,6 +64,7 @@
             <a href="./about/coc.html">Code of Conduct</a></br>
             <a href="./about.html">Our Values and Staff</a></br>
             <a href="./about/contact.html">Contact Us</a></br>
+            <a href="./about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -114,7 +115,7 @@
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
 <h2 class="section-header"></a>Where do I sign up?</h2>
-<p>Due to your overwhelming enthusiasm, we are currently sold out of tickets! Those who reserved a ticket can pay the remaining price starting August 14, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and you can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
+<p>Those who reserved a ticket can pay the remaining price starting August 14, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and we will have a limited number of tickets available for sale at full price on August 14 at 12:00 PM PT. You can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
 <h2 class="section-header">How do I learn about updates?</h2>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
@@ -123,9 +124,9 @@
 <p>Please see our <a href="./event/event-faq.html">event FAQ page</a> for more information about our event. If your question isn't answered there, see our <a href="./contact.html">Contact Us page</a>.</p>
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
-<p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/vendors/kaneko.jpg" width="200" class="img-fluid" alt="Kaneko logo"/></a></p>
+<p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/vendors/kaneko.jpg" width="200" class="img-fluid" alt="Kaneko logo"/></a><a href="https://strawberry-teapot.myshopify.com/"><img src="./images/strawberryteapot.png" width="200" class="img-fluid" alt="Strawberry Teapot logo"/></a><a href="https://lucyandodie.com/"><img src="images/Lucy_Odie_logo.jpg" width="200" class="img-fluid" alt="Lucy and Odie logo"/></a></p>
 <h2 class="section-header">Partner Organizations</h2>
-<p><a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> ♥ <a href="https://www.roseforet.com/">Rosé Forêt</a></p>
+<p><a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> ♥ <a href="https://www.roseforet.com/">Rosé Forêt</a> ♥ <a href="https://www.kawaiiriot.org">Kawaii Riot</a></p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
