--- a/event/reg.html
+++ b/event/reg.html
@@ -64,6 +64,7 @@
             <a href="../about/coc.html">Code of Conduct</a></br>
             <a href="../about.html">Our Values and Staff</a></br>
             <a href="../about/contact.html">Contact Us</a></br>
+            <a href="../about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
@@ -92,9 +93,8 @@
   <h1>RVR Registration</h1>
   <hr>
   <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
-  <p>We have sold out of ticket reservations for 2021! Thank you all for your support.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Prices will be as follows:
+  <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Sales will start on August 14th at 12:00 PM PT. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
