--- a/virtual.html
+++ b/virtual.html
@@ -69,6 +69,7 @@
             <a href="./about/coc.html">Code of Conduct</a></br>
             <a href="./about.html">Our Values and Staff</a></br>
             <a href="./about/contact.html">Contact Us</a></br>
+            <a href="./about/privacy.html">Privacy Policy</a></br>
            </p>
           </div>
       </li>
