Add swap meet page content, add page to nav, add deadline for reservations to reg page, remove old page

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -37,6 +37,7 @@
               <a href="./reg.html" >Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
               <a href="./special-guests.html" class="active">Special Guests</a></br>
+              <a href="./swap-meet.html">Swap Meet</a></br>
               <a href="./tourists.html">Tourists</a></br>
               <a href="./vendors.html">Vendors</a></br>
               <a href="./volunteers.html">Volunteers</a>
