--- a/event/swap-meet.html
+++ b/event/swap-meet.html
@@ -32,10 +32,11 @@
               <p class="sub-menu">
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
-              <a href="./programming.html" class="active">Programming and Schedule</a></br>
+              <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
               <a href="./special-guests.html">Special Guests</a></br>
+              <a href="./swap-meet.html" class="active">Swap Meet</a></br>
               <a href="./tourists.html">Tourists</a></br>
               <a href="./vendors.html">Vendors</a></br>
               <a href="./volunteers.html">Volunteers</a>
@@ -91,7 +92,19 @@
   <h1 class="sec01">
   <h1>RVR 2021 Swap Meet</h1>
   <hr>
-  <p>Coming soon!</p>
+  <p>We are pleased to announce our Royal Vegas Retreat 2021 swap meet! We are selling tables to sellers <a href="https://www.eventbrite.com/e/rvr-2021-swap-meet-tickets-168024398499">via Eventbrite</a>. Table capacity is limited, so selling at our swap meet is a ticketed event. This also helps us cut down on last-minute flakes and raise money for our event! Tables cost $15 each and they will go on sale starting September 6 at 12:00 PM PT.</p>
+  <p>Swap Meets are great places to buy and sell second hand at great prices – and no shipping, either! It's also a fantastic way to meet and connect with other lolitas and comms and make new friends along the way. 
+    <p>If you're considering purchasing a ticket to sell at our swap meet, please keep the following in mind: 
+      <ol>
+        <li>You must have already purchased an attendance ticket prior to purchasing a swap meet ticket, or otherwise have a badge with access to the convention.</li>
+        <li>A swap meet ticket is an additional purchase. It is not a GA ticket, nor does it come with a separate ticket to the convention.</li>
+        <li>By purchasing a ticket and vending, you agree to PPC's code of conduct. Violations to this code of conduct will result in revoking your swap meet table without a refund.</li> 
+        <li>If you don't get in initially, don't worry! There will also be a limited wait list for potential vendors in the case of cancellations. It's a fist come first serve situation, so get it quick! You can get on the email list by emailing PPC staffer Ruthie directly at <a href="mailto:ruthiehansonwork@gmail.com">ruthiehansonwork@gmail.com</a>.</li>
+        <li>If you need to cancel your table for any reason, please contact <a href="mailto:ruthiehansonwork@gmail.com">PPC staffer Ruthie</a> at least 72 hours ahead of time so that we may fill the spot with a wait-listed vendor. In the case of an emergency, please coordinate with the convention staff for a refunded table. Otherwise, a no-show or too late cancellation may result in a non refunded table.</li>
+        <li>When you receive your confirmation email, you will also be given the guidelines for the event, as well as tips to help make your vending experience as smooth as possible.</li> 
+        <li>All RVR attendees are welcome to shop at the swap meet. This additional ticket allows us to cap seller attendance to keep our floor plans spacious and safe, as well as cut down on flakes and raise money for the event. </li>
+      </ol></p>
+      <p>If you have any questions, don't hesitate to ask! Ruthie is our Swap Meet coordinator, and she's  <a href="mailto:ruthiehansonwork@gmail.com"> available via email</a> for any concerns you might have!</p>
 </div>
 
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
