--- a/vegas.html
+++ b/vegas.html
@@ -37,6 +37,7 @@
               <a href="./event/reg.html">Registration</a></br>
               <a href="./event/venue.html">Room Block and Venue</a></br>
               <a href="./event/special-guests.html">Special Guests</a></br>
+              <a href="./event/swap-meet.html">Swap Meet</a></br>
               <a href="./event/tourists.html">Tourists</a></br>
               <a href="./event/vendors.html">Vendors</a></br>
               <a href="./event/volunteers.html">Volunteers</a>
@@ -93,9 +94,9 @@
     <h3>November 19 - November 21, 2021</h3>
 <h1 class="sec01">
 <p>
-  <a href="./event/event-faq.html">FAQ</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
+   ♥ <a href="./event/event-faq.html">FAQ</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
               <a href="./event/reg.html">Registration</a> ♥
-              <a href="./event/special-guests.html">Special Guests</a> ♥
+              <a href="./event/special-guests.html">Special Guests</a> ♥ <a href="./event/swap-meet.html">Swap Meet</a>  ♥ 
               <a href="./event/tourists.html">Tourists</a> ♥ <br>
               ♥ <a href="./event/vendors.html">Vendors</a> ♥
               <a href="./event/venue.html">Venue</a> ♥
