--- a/event/reg.html
+++ b/event/reg.html
@@ -37,6 +37,7 @@
               <a href="./reg.html" class="active">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
               <a href="./special-guests.html">Special Guests</a></br>
+              <a href="./swap-meet.html">Swap Meet</a></br>
               <a href="./tourists.html">Tourists</a></br>
               <a href="./vendors.html">Vendors</a></br>
               <a href="./volunteers.html">Volunteers</a>
@@ -93,7 +94,7 @@
   <h1>RVR Registration</h1>
   <hr>
   <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
-  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
+  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>. The final payment on ticket reservations is due September 1st.</p> 
   <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Sales will start on August 14th at 12:00 PM PT. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
