--- a/virtual.html
+++ b/virtual.html
@@ -42,6 +42,7 @@
               <a href="./event/reg.html">Registration</a></br>
               <a href="./event/venue.html">Room Block and Venue</a></br>
               <a href="./event/special-guests.html">Special Guests</a></br>
+              <a href="./event/swap-meet.html">Swap Meet</a></br>
               <a href="./event/tourists.html">Tourists</a></br>
               <a href="./event/vendors.html">Vendors</a></br>
               <a href="./event/volunteers.html">Volunteers</a>
